kubernetes/prod/02-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: learnanything
  namespace: learnanything
spec:
  selector:
    app: lat-web
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
