kubernetes/prod/03-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learnanything
  namespace: learnanything
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: learnanything.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: learnanything
            port:
              number: 80
